# FullPPClassification

./: benchmark_full_results.csv  benchmark_results.csv  benchmark_results_gemini.csv  clean_reports.py  main.py  pyproject.toml  readMe.md  requirements.txt
.deepeval/: .deepeval_telemetry.txt
data/: .gitignore
reports/: DB_102_gemini_gemini-2.5-flash.html  DB_102_gemini_gemini-3-flash-preview.html  DB_102_openai_gpt-5-mini-2025-08-07.html  DB_102_openrouter_meta-llama_llama-4-maverick.html  DB_102_openrouter_x-ai_grok-4.1-fast.html  DB_104_gemini_gemini-2.5-flash.html  DB_104_gemini_gemini-3-flash-preview.html  DB_104_openai_gpt-5-mini-2025-08-07.html  DB_104_openrouter_meta-llama_llama-4-maverick.html  DB_104_openrouter_x-ai_grok-4.1-fast.html  DB_116_gemini_gemini-2.5-flash.html  DB_116_gemini_gemini-3-flash-preview.html  DB_116_openai_gpt-5-mini-2025-08-07.html  DB_116_openrouter_meta-llama_llama-4-maverick.html  DB_116_openrouter_x-ai_grok-4.1-fast.html  DB_117_gemini_gemini-2.5-flash.html  DB_117_gemini_gemini-3-flash-preview.html  DB_117_openai_gpt-5-mini-2025-08-07.html  DB_117_openrouter_meta-llama_llama-4-maverick.html  DB_117_openrouter_x-ai_grok-4.1-fast.html  DB_121_gemini_gemini-2.5-flash.html  DB_121_gemini_gemini-3-flash-preview.html  DB_121_openai_gpt-5-mini-2025-08-07.html  DB_121_openrouter_meta-llama_llama-4-maverick.html  DB_121_openrouter_x-ai_grok-4.1-fast.html  DB_122_gemini_gemini-2.5-flash.html  DB_122_gemini_gemini-3-flash-preview.html  DB_122_openai_gpt-5-mini-2025-08-07.html  DB_122_openrouter_meta-llama_llama-4-maverick.html  (+295 more)
(+1610 files in other folders)
