[project]
name = "fullppclassification"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aisuite>=0.1.13",
    "deepeval>=3.8.4",
    "json-repair>=0.56.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
